<resources>
    <string name="app_name">CryptoPie</string>
    <string name="all_next">Next</string>
    <string name="all_ok">Ok</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_clear_text">Clear</string>
    <string name="all_loading">Loading</string>
    <string name="all_confirm">Are you sure?</string>


    <string name="account_email">Email</string>
    <string name="account_edit">Account</string>
    <string name="account_code">Digital code</string>
    <string name="account_password">Password</string>
    <string name="account_password_repeat">Repeat password</string>
    <string name="account_email_error">Email not valid</string>
    <string name="account_code_was_sent">Code was sent to your email</string>
    <string name="account_was_updated">Account was updated</string>
    <string name="account_first_name">First name</string>
    <string name="account_last_name">Last name</string>
    <string name="account_gallery_denied">To change avatar you have to grant external storage permission</string>
    <string name="account_gallery_explanation">To change avatar it need access to gallery</string>
    <string name="account_logout">Logout</string>
    <string name="account_auth_error">Wrong email or password</string>
    <string name="account_duplicate_email">Duplicate email</string>


    <string name="title_activity_auth">Sign in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_restore">Restore password</string>
    <string name="title_activity_portfolios">Portfolios chart</string>
    <string name="title_activity_main">Coins</string>
    <string name="auth_forgot_password">Forgot password?</string>


    <string name="title_home">Chart</string>
    <string name="title_settings">Pie</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_transaction">Add transaction</string>
    <string name="title_activity_buy_sell_transaction">Buy/Sell coin</string>
    <string name="title_activity_edit_transaction">Edit coin</string>
    <string name="title_activity_autocomplete">Choose coin</string>
    <string name="title_activity_pie">Portfolio pie</string>
    <string name="coin">Coin</string>
    <string name="exchange">Exchange</string>
    <string name="type_of_transaction">Type of transaction</string>
    <string name="pair">Pair</string>
    <string name="price_of_coin">Price</string>
    <string name="price_in_total">Total price</string>
    <string name="price_per_coin">Per coin</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Trade data</string>
    <string name="total">Total</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="correct">Correct</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="price_threshold">Price threshold</string>
    <string name="title_activity_notification">Add notification</string>

    <string name="portfolio_profit_24h">Daily\nrating</string>
    <string name="portfolio_profit_7d">Weekly\nrating</string>
    <string name="portfolio_profit_all">Profit</string>

    <string name="portfolio_coin_buy">Buy</string>
    <string name="portfolio_coin_sell">Sell</string>
    <string name="portfolio_coin_general">General</string>
    <string name="portfolio_coin_alerts">Alerts</string>
    <string name="portfolio_coin_all_time">All time</string>
    <string name="portfolio_coin_amount">Amount</string>
    <string name="portfolio_coin_buy_price">Buy price</string>
    <string name="portfolio_coin_current_value">Current value</string>
    <string name="portfolio_coin_total_cost">Total cost</string>
    <string name="portfolio_coin_price">Price</string>
    <string name="portfolio_coin_24h_change">Coin 24h change</string>
    <string name="portfolio_coin_exchange">Exchange</string>

    <string name="transaction_amount_error">You can\'t sell more of a position than %f</string>
    <string name="transaction_amount_error_zero">You can\'t sell negative or zero amount of a position</string>
    <string name="transaction_pair_not_found">Pair not found for that exchange</string>
    <string name="transaction_amount_error_parse">Amount is not correct</string>
    <string name="transaction_menu_done">Done</string>
    <string name="transaction_description_error">Descriptions length restricted by 160 characters</string>
    <string name="transaction_buy_button">Buy %s</string>
    <string name="transaction_sell_button">Sell %s</string>
    <string name="transaction_description">Description</string>
    <string name="transaction_header">Transactions</string>


    <string name="transition_user_logo">TRANSITION:USER_LOGO</string>
    <string name="transition_autocomplete_coin">TRANSITION:AUTOCOMLETE_COIN</string>
    <string name="transition_autocomplete_clear">TRANSITION:AUTOCOMLETE_CLEAR</string>
    <string name="fab_dialog_transition_name">transition.fab</string>


    <string name="portfolio_coin_edit">Edit</string>
    <string name="portfolio_coin_remove">Remove</string>


</resources>
