<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.start.crypto.android.account.RestorePasswordActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/code_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:labelFor="@+id/code"
            android:text="@string/account_code"

            app:layout_constraintBottom_toTopOf="@+id/code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/code"
            style="@style/AppEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"

            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_label" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:labelFor="@+id/password"
            android:text="@string/account_password"

            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code" />

        <EditText
            android:id="@+id/password"
            style="@style/AppEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textPassword"

            app:layout_constraintBottom_toTopOf="@+id/password_repeat_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <TextView
            android:id="@+id/password_repeat_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:labelFor="@+id/password_repeat"
            android:text="@string/account_password_repeat"

            app:layout_constraintBottom_toTopOf="@+id/password_repeat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/password_repeat"
            style="@style/AppEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textPassword"

            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_repeat_label" />

        <Button
            android:id="@+id/next"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_next"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_repeat"
            />
    </android.support.constraint.ConstraintLayout>
</ScrollView>



