<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_user_default"

            android:layout_marginTop="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"

            />

        <ImageView
            android:id="@+id/avatar_upload_process"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/avatar_upload_process"

            app:layout_constraintTop_toTopOf="@+id/avatar"
            app:layout_constraintLeft_toLeftOf="@+id/avatar"
            app:layout_constraintRight_toRightOf="@+id/avatar"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintVertical_chainStyle="packed"

            android:visibility="gone"

            />

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/first_name"
            android:text="@string/account_first_name"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="first name"
            android:gravity="center"
            android:inputType="text"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@+id/first_name_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/last_name"
            android:text="@string/account_last_name"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"

            app:layout_constraintTop_toBottomOf="@+id/first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            />


        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="last name"
            android:gravity="center"
            android:inputType="text"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@+id/last_name_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />


        <Button
            android:id="@+id/next"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_ok"
            android:enabled="false"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@+id/last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_logout"
            android:textColor="@color/colorTextPrimary"
            android:background="@drawable/button_bordered"

            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintTop_toBottomOf="@+id/next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />


    </android.support.constraint.ConstraintLayout>
</ScrollView>